Bug 469474 - No IPv6 support anymore
Summary: No IPv6 support anymore
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: sshmanager (other bugs)
Version First Reported In: 22.12.3
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-08 10:11 UTC by Henning
Modified: 2025-06-02 06:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-4027096-0.html (1.58 KB, text/html)
2023-06-05 08:15 UTC, tcanabrava
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Henning 2023-05-08 10:11:28 UTC
SUMMARY
In the SSH manage I cant enter ":" anymore, it was possible in a recent version. This disables IPv6 adresses automatically.


STEPS TO REPRODUCE
1. Add a new SSH config with "+"
2. Try to enter a ":" in the adress field

OBSERVED RESULT
I cant enter a colon.

EXPECTED RESULT
Colons should work normally, as the module just pastes the input.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9
Kernel Version: 6.2.14-300.fc38.x86_64 (64-bit)

konsole5-22.12.3-1.fc38.x86_64
Comment 1 Justin Zobel 2023-06-05 03:25:15 UTC
Can confirm in the git master Qt6 build, cannot type : in the hostname field.
Comment 2 tcanabrava 2023-06-05 08:15:43 UTC
Created attachment 159471 [details]
attachment-4027096-0.html

Does it work on master / qt5?
From what I know no one from the Konsole team has a qt6 build yet.


On Mon, 5 Jun 2023 at 04:25 Justin Zobel <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=469474
>
> Justin Zobel <justin.zobel@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |justin.zobel@gmail.com
>              Status|REPORTED                    |CONFIRMED
>      Ever confirmed|0                           |1
>
> --- Comment #1 from Justin Zobel <justin.zobel@gmail.com> ---
> Can confirm in the git master Qt6 build, cannot type : in the hostname
> field.
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
Comment 3 Justin Zobel 2023-06-06 02:11:04 UTC
Issue occurs on Qt5 Git master as well.
Comment 4 Henning 2023-06-10 12:02:40 UTC
Still happening on


Specified App:
konsole5-23.04.1-1.fc38.x86_64

--- Software ---
OS: Fedora Linux 38.20230609.0 (Kinoite)
KDE Plasma: 5.27.5
KDE Frameworks: 5.106.0
Qt: 5.15.9
Kernel: 6.3.5-200.fc38.x86_64
Compositor: wayland
Comment 5 Yaron Shahrabani 2025-02-16 14:14:24 UTC
Created a new MR to handle this project, it requires a rather complicated regex, I tested it with some cases and it looks fine but there are probably some blindspots I couldn't recognize, feel free to test and comment.

https://invent.kde.org/utilities/konsole/-/merge_requests/1065
Comment 6 Bug Janitor Service 2025-06-01 20:18:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/1105
Comment 7 Christoph Cullmann 2025-06-02 06:51:51 UTC
Git commit 80785a9c0ffba28defdaa53c0a4402bdcf618d02 by Christoph Cullmann.
Committed on 01/06/2025 at 20:17.
Pushed by tcanabrava into branch 'master'.

allow all hostnames and more ports

skip bogus host name validation, the most common error
is a wrong one, not an invalid one

allow full port range, people can setup ssh servers on
any ports

fixes IPv6 addresses as hostnames

M  +2    -12   src/plugins/SSHManager/sshmanagerpluginwidget.cpp

https://invent.kde.org/utilities/konsole/-/commit/80785a9c0ffba28defdaa53c0a4402bdcf618d02