allow all hostnames and more ports

skip bogus host name validation, the most common error
is a wrong one, not an invalid one

allow full port range, people can setup ssh servers on
any ports

fixes IPv6 addresses as hostnames

BUG: 469474